welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: not found: value valeur
			valeur = litMessage().toInt;
                        ^Array2:19: error: not found: value valeur
			setCouleurBrosse(T((k-1+ valeur) % getMondeHauteur()));
                                                 ^